@@ -2,7 +2,7 @@ package data;
 
 import entities.Card;
 import entities.CardFactory;
-import use_cases.build_deck.CardDataAccessInterface;
+import use_cases.build_deck.BuildDeckDataAccessInterface;
 
 import java.io.*;
 import java.util.HashMap;
@@ -11,13 +11,13 @@ import java.util.Map;
 
 
 // reads cards from the collection (stored in a csv file)
-public class CardDAO implements CardDataAccessInterface {
+public class CardDAO implements BuildDeckDataAccessInterface {
 
     private final File csvFile;
 
     private final Map<String, Integer> headers = new LinkedHashMap<>();
 
-    private final Map<String, Card> cards = new HashMap<>(); // mapping of the pokemon's id to the pokemon itself (this is in the user's collection)
+    private final Map<String, Card> cards = new HashMap<>(); // mapping of the pokemon's id to the pokemon itself (this is in the user's use_cases.collection)
 
     private CardFactory cardFactory;
 
@@ -27,6 +27,8 @@ public class CardDAO implements CardDataAccessInterface {
         csvFile = new File(csvPath);
         headers.put("id", 0);
         headers.put("name", 1);
+        headers.put("isHighHp", 2);
+        headers.put("isSpecial", 3);
 
 
         if (csvFile.length() == 0) {
@@ -35,7 +37,7 @@ public class CardDAO implements CardDataAccessInterface {
 
             try (BufferedReader reader = new BufferedReader(new FileReader(csvFile))) {
                 String header = reader.readLine();
-                assert header.equals("id,name");
+                assert header.equals("id,name,isHighHp,isSpecial");
 
                 String row;
                 while ((row = reader.readLine()) != null) {
@@ -63,8 +65,7 @@ public class CardDAO implements CardDataAccessInterface {
             writer.newLine();
 
             for (Card card : cards.values()) {
-                String line = "%s,%s".formatted(
-                        card.getId(), card.getName());
+                String line = String.format("%s,%s", card.getId(), card.getName(), card.isHighHp(), card.isSpecial());
                 writer.write(line);
                 writer.newLine();
             }
